# vulkan-engine

./: .editorconfig  .gitignore  CMakeLists.txt  Main.storyboard  OldRenderTypes.cpp  Readme.md  RenderTypes.cpp  Storyboard.storyboard  VulkanHelloTriangleExample.cpp  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
applications/prefab_editor/: PrefabEditorApplication.cpp  PrefabEditorApplication.hpp  WindowsApi.cpp  WindowsApi.hpp
applications/prefab_editor/scenes/: PrefabEditorScene.cpp  PrefabEditorScene.hpp
applications/ray_tracing_weekend/: RayTracingWeekendApplication.cpp  RayTracingWeekendApplication.hpp
applications/ray_tracing_weekend/camera/: Camera.cpp  Camera.hpp
applications/ray_tracing_weekend/geometry/: Geometry.cpp  Geometry.hpp  HitRecord.hpp
applications/ray_tracing_weekend/material/: Material.cpp  Material.hpp
applications/ray_tracing_weekend/ray/: Ray.cpp  Ray.hpp
applications/ray_tracing_weekend/sphere/: Sphere.cpp  Sphere.hpp
applications/techdemo/: TechDemoApplication.cpp  TechDemoApplication.hpp
assets/bristleback/: scene.gltf
assets/depracated_shaders/directional_light_shadow/: DirectionalLightShadow.geom.spv  DirectionalLightShadow.vert.hlsl
assets/depracated_shaders/pbr/: pbr.frag.spv  pbr.vert.hlsl  pbr.vert.spv
assets/depracated_shaders/pbr_with_shadow/: OffscreenShadow.frag.spv  OffscreenShadow.vert.spv  PbrWithShadow.frag.hlsl  PbrWithShadow.vert.spv
assets/depracated_shaders/point_light_shadow/: PointLightShadow.frag.spv  PointLightShadow.geom.spv  PointLightShadow.vert.spv
assets/free_zuk_3d_model/: license.txt
assets/kirpi_mrap__lowpoly__free_3d_model/: scene.gltf
assets/models/CesiumMan/: README.md
assets/models/box/: Box.gltf
assets/models/bristleback/: scene.gltf
assets/models/female_full-body_cyberpunk_themed_avatar/: license.txt  scene.gltf
assets/models/fortnite_the_mandalorianbaby_yoda/: license.txt  scene.gltf
assets/models/free_1975_porsche_911_930_turbo/: scene.gltf
assets/models/free_zuk_3d_model/: scene.gltf
assets/models/gunship/: scene.gltf
assets/models/jade/: gunner.gltf
assets/models/kar98k_free_model/: scene.gltf
assets/models/mandalorian__the_fortnite_season_6_skin_updated/: license.txt  scene.gltf
assets/models/metallic_sphere/: MetalRoughSpheres.gltf
assets/models/mira/: scene.gltf
assets/models/sponza/: README.md  sponza.gltf
assets/models/warcraft_3_alliance_footmanfanmade/: license.txt  scene.gltf
assets/models/warhammer_40k_predator_dark_millennium/: scene.gltf
assets/prefabs/: soldier.json  sponza.json  sponza2.json  sponza3.json
assets/shaders/: CameraBuffer.hlsl  ComputeDirectionalLightShadow.hlsl  ComputePointLightShadow.hlsl  DirectionalLightBuffer.hlsl  DirectionalLightShadow.hlsl  DirectionalLightShadowMap.hlsl  Math.hlsl  MaxTextureCount.hlsl  Normal.hlsl  PBR.hlsl  PointLightBuffer.hlsl  PointLightShadow.hlsl  PointLightShadowMap.hlsl  PrimitiveInfoBuffer.hlsl  Random.hlsl  SkinJointsBuffer.hlsl  TextureSampler.hlsl  TexturesBuffer.hlsl  TimeBuffer.hlsl  frag.spv  tr.frag.hlsl  tr.vert.hlsl  vert.spv
assets/shaders/cloth/: cloth.comp.hlsl  cloth.comp.spv  cloth.frag.spv  cloth.vert.spv
assets/shaders/debug_renderer/: DebugRenderer.frag.spv  DebugRenderer.vert.hlsl  DebugRenderer.vert.spv
assets/shaders/depth_pre_pass/: DepthPrePass.frag.hlsl  DepthPrePass.frag.spv  DepthPrePass.vert.hlsl  DepthPrePass.vert.spv
assets/shaders/directional_light_shadow/: DirectionalLightShadow.geom.hlsl  DirectionalLightShadow.geom.spv  DirectionalLightShadow.vert.hlsl  DirectionalLightShadow.vert.spv
buildIOS/MFaEngine.xcodeproj/: project.pbxproj
document/: Animation.md  ParticleSystem.md
ios/: ViewController.h  ViewController.mm  main.mm
libs/linux/: libvulkan.so.1
libs/mac/: libvulkan.1.2.141.dylib  libvulkan.1.3.211.dylib  libvulkan.1.dylib
libs/win/: clang_rt.asan_dynamic-x86_64.lib  clang_rt.asan_dynamic_runtime_thunk-x86_64.lib
linux/: main.cpp
mac/: BedrockPath.mm  info.plist  main.cpp  main.mm
src/: Application.cpp  Application.hpp  AssetTypes.hpp  BaseInterface.hpp  BedrockAssert.cpp  BedrockAssert.hpp  BedrockCommon.hpp  BedrockLog.hpp  BedrockMath.hpp  BedrockMemory.cpp  BedrockMemory.hpp  BedrockPlatforms.cpp  BedrockPlatforms.hpp  FileSystem.cpp  FileSystem.h  FileSystem.hpp  FoundationAsset.hpp  ImageUtils.cpp  ImageUtils.hpp  Importer.cpp  MMath.h  MathHelper.h  MatrixTemplate.h  MatrixTemplate.hpp  OldApplication.cpp  OldApplication.hpp  OldRenderTypes.hpp  OldRenderer.cpp  OldRenderer.hpp  Platforms.hpp  RenderBackend.cpp  RenderBackend.hpp  RenderTypes.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Types.hpp  main.cpp
src/engine/: BedrockAssert.cpp  BedrockAssert.hpp  BedrockCommon.hpp  BedrockFileSystem.cpp  BedrockFileSystem.hpp  BedrockLog.hpp  BedrockMath.hpp  BedrockMatrix.cpp  BedrockMatrix.hpp  BedrockMemory.cpp  BedrockMemory.hpp  BedrockPath.cpp  BedrockPath.hpp  BedrockPlatforms.cpp  BedrockPlatforms.hpp  BedrockRotation.cpp  BedrockRotation.hpp  BedrockSignal.hpp  BedrockSignalTypes.hpp  BedrockString.hpp  BedrockTime.hpp  DepracatedBedrockMatrix.hpp  DrawableObject.cpp  DrawableObject.hpp  FoundationAsset.cpp  FoundationAsset.hpp  FoundationAssetFWD.hpp  InputManager.cpp  InputManager.hpp  RenderBackend.cpp  RenderBackend.hpp  RenderFrontend.cpp  RenderFrontend.hpp  Scene.cpp  Scene.hpp  UISystem.cpp  UISystem.hpp
src/scenes/: GLTFMeshViewerScene.cpp  MeshViewerScene.cpp  PBRScene.cpp  PointLightScene.cpp  SpecularHighlightScene.cpp  SpecularHighlightScene.hpp  TextureViewerScene.hpp  TextureViewrScene.cpp  TexturedSphereScene.cpp
src/tools/: ImageUtils.cpp  ImageUtils.hpp  Importer.cpp  Importer.hpp  JsonUtils.cpp  JsonUtils.hpp  Prefab.cpp  Prefab.hpp  PrefabFileStorage.cpp  PrefabFileStorage.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp
unit_tests/: catch.hpp  rlutil.h  testMain.cpp
unit_tests/engine/: testBedrockMath.cpp  testBedrockMatrix.cpp  testPath.cpp  testSIMD.cpp
windows/: main.cpp
(+466 files in other folders)
